# CircuitCalculator

./: CMakeLists.txt  README.md  ac_circuit.cpp  circuit.cpp  circuit.h  complex_number.cpp  complex_number.h  dc_circuit.cpp  graph.cpp  graph.h  input_parser.cpp  input_parser.h  input_preworker.cpp  input_preworker.h  main.cpp  matrix.cpp  matrix.h  scan.cpp  scan.ll  scanner.h  three_phase_circuit.cpp
t/: ac_circuit_test.cpp  big_ac_circuit_test.cpp  big_circuit_test.cpp  big_dc_circuit_test.cpp  big_three_phase_circuit_test.cpp  circuit_test.cpp  complex_number_test.cpp  dc_circuit_test.cpp  graph_test.cpp  input_parser_test.cpp  input_preworker_test.cpp  matrix_test.cpp  three_phase_circuit_test.cpp
t/e2e_ac_test/: CapacityConsistent100_test.txt  CapacityConsistent10_test.txt  CapacityConsistent20_answer.txt  CapacityConsistent20_test.txt  CapacityConsistent30_test.txt  CapacityConsistent40_test.txt  CapacityConsistent50_test.txt  CapacityConsistent60_test.txt  CapacityConsistent70_test.txt  CapacityConsistent80_test.txt  CapacityConsistent90_answer.txt  CapacityConsistent90_test.txt  FullyConnected100_test.txt  FullyConnected10Subcircuit10_test.txt  FullyConnected10Subcircuit2_answer.txt  FullyConnected10Subcircuit2_test.txt  FullyConnected10Subcircuit50_test.txt  FullyConnected10Subcircuit5_answer.txt  FullyConnected10Subcircuit5_test.txt  FullyConnected10_test.txt  FullyConnected20Subcircuit10_answer.txt  FullyConnected20Subcircuit10_test.txt  FullyConnected20Subcircuit2_test.txt  FullyConnected20Subcircuit50_answer.txt  FullyConnected20Subcircuit50_test.txt  FullyConnected20Subcircuit5_test.txt  FullyConnected20_answer.txt  FullyConnected20_test.txt  FullyConnected30Subcircuit10_test.txt  FullyConnected30Subcircuit2_answer.txt  FullyConnected30Subcircuit2_test.txt  FullyConnected30Subcircuit50_answer.txt  FullyConnected30Subcircuit50_test.txt  FullyConnected30Subcircuit5_test.txt  FullyConnected30_answer.txt  FullyConnected30_test.txt  FullyConnected40Subcircuit10_test.txt  FullyConnected40Subcircuit2_test.txt  FullyConnected40Subcircuit50_test.txt  FullyConnected40Subcircuit5_answer.txt  (+82 more)
t/e2e_dc_test/: Consistent100_answer.txt  Consistent100_test.txt  Consistent10_answer.txt  Consistent10_test.txt  Consistent20_answer.txt  Consistent20_test.txt  Consistent30_answer.txt  Consistent30_test.txt  Consistent40_answer.txt  Consistent40_test.txt  Consistent50_answer.txt  Consistent50_test.txt  Consistent60_answer.txt  Consistent60_test.txt  Consistent70_answer.txt  Consistent70_test.txt  Consistent80_answer.txt  Consistent80_test.txt  Consistent90_answer.txt  Consistent90_test.txt  FullyConnected100_answer.txt  FullyConnected100_test.txt  FullyConnected10Subcircuit10_answer.txt  FullyConnected10Subcircuit10_test.txt  FullyConnected10Subcircuit2_answer.txt  FullyConnected10Subcircuit2_test.txt  FullyConnected10Subcircuit50_answer.txt  FullyConnected10Subcircuit50_test.txt  FullyConnected10Subcircuit5_answer.txt  FullyConnected10Subcircuit5_test.txt  FullyConnected10_answer.txt  FullyConnected10_test.txt  FullyConnected20Subcircuit10_answer.txt  FullyConnected20Subcircuit10_test.txt  FullyConnected20Subcircuit2_answer.txt  FullyConnected20Subcircuit2_test.txt  FullyConnected20Subcircuit50_answer.txt  FullyConnected20Subcircuit50_test.txt  FullyConnected20Subcircuit5_answer.txt  FullyConnected20Subcircuit5_test.txt  (+49 more)
t/e2e_three_phase_test/: CapacityConsistent100_answer.txt  CapacityConsistent100_test.txt  CapacityConsistent10_answer.txt  CapacityConsistent10_test.txt  CapacityConsistent20_test.txt  CapacityConsistent30_answer.txt  CapacityConsistent30_test.txt  CapacityConsistent40_answer.txt  CapacityConsistent40_test.txt  CapacityConsistent50_answer.txt  CapacityConsistent50_test.txt  CapacityConsistent60_answer.txt  CapacityConsistent60_test.txt  CapacityConsistent70_answer.txt  CapacityConsistent70_test.txt  CapacityConsistent80_answer.txt  CapacityConsistent80_test.txt  CapacityConsistent90_test.txt  FullyConnected100_answer.txt  FullyConnected100_test.txt  FullyConnected10Subcircuit10_answer.txt  FullyConnected10Subcircuit10_test.txt  FullyConnected10Subcircuit2_test.txt  FullyConnected10Subcircuit50_answer.txt  FullyConnected10Subcircuit50_test.txt  FullyConnected10Subcircuit5_test.txt  FullyConnected10_answer.txt  FullyConnected10_test.txt  FullyConnected20Subcircuit10_test.txt  FullyConnected20Subcircuit2_answer.txt  FullyConnected20Subcircuit2_test.txt  FullyConnected20Subcircuit50_test.txt  FullyConnected20Subcircuit5_answer.txt  FullyConnected20Subcircuit5_test.txt  FullyConnected20_test.txt  FullyConnected30Subcircuit10_answer.txt  FullyConnected30Subcircuit10_test.txt  FullyConnected30Subcircuit2_test.txt  FullyConnected30Subcircuit50_test.txt  FullyConnected30Subcircuit5_answer.txt  (+105 more)
t/e2e_three_phase_test/elements/: C1.txt  L1.txt  R1.txt  R1C1.txt  R1C1L1.txt  R1L1.txt  simple1.txt  simple10.txt  simple11.txt  simple12.txt  simple2.txt  simple3.txt  simple4-1.txt  simple4-2.txt  simple5-1.txt  simple5-2.txt  simple6.txt  simple7.txt  simple8.txt  simple9.txt
